atualizando pagina inicial

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -95,8 +95,8 @@ body {
         <div class="main">
           <div class="title">Principal</div>
           <a href="#" class="item active"><span class="icon"><i class="fa fa-home"></i></span><span class="name">Inicio</span></a>
-          
           <a href="#api-title" class="item"><span class="icon"><i class="fa fa-folder-o"></i></span><span class="name">API</span></a>
+          <a href="https://dados-live-ufma.herokuapp.com/" class="item"><span class="icon"><i class="fa fa-folder-o""></i></span><span class="name">LiveAPI</span></a>
           <a href="http://dadosabertos.ufma.br/" class="item"><span class="icon"><i class="fa fa-folder-o"></i></span><span class="name">Portal Oficial (UFMA)</span></a>
         </div>
         
@@ -115,9 +115,9 @@ body {
 
           
                
-          <div class="title is-3"  id="api-title">API</div>
+          <div class="title is-3"  id="liveapi-title">API</div>
 
-            <p>Essa API retorna dados que já foram importados previamente para uma base de dados. Assim ela irá retornar os dados com mais eficiência. Só as operações POST requer autorização.</p>
+          <p>Essa API retorna dados que já foram importados previamente para uma base de dados. Assim ela irá retornar os dados com mais eficiência. Só as operações POST requer autorização.</p>
           
           <div id="swagger-ui-api" ></div>
 
